# chip8-emulator

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yml
src/: cli.rs  commands.rs  constants.rs  cpu.rs  display.rs  emulator.rs  error.rs  frame.rs  main.rs  opcode.rs
