[package]
name = "chip8_emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
piston = "0.55.0"
piston_window = "0.132.0"
pixels = "0.13.0"
winit = "0.28.0"
winit_input_helper = "0.14.0"
egui = "0.22.0"
egui_winit_platform = "0.19.0"
egui_wgpu_backend = "0.24.0"
